--- a/pr/style.css
+++ b/pr/style.css
@@ -1,7 +1,7 @@
 body {
 
     height: 100vh;
-    background-image: url('/img/back.jpg');
+    background-image: url('img/back.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -21,7 +21,11 @@ body {
 }
 
 .title {
-    
+    width: 100%;
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 40px;
+    color: rgba(2, 30, 45, 0.845);
 }
 
 .box {
@@ -29,4 +33,19 @@ body {
     width: 40%;
     background-color: rgba(198, 225, 234, 0.719);
     border-radius: 15px;
+
+    display: flex;
+    flex-direction: column;
+}
+
+
+.todo-header {
+    margin-top: 35px;
+    width: 100%;
+    text-align: center;
+}
+
+.todo-list {
+    margin-top: 30px;
+
 }
